--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.2.0",
     "typescript": "~4.0.3"
   },
   "scripts": {
@@ -47,5 +48,8 @@
     "printWidth": 120,
     "trailingComma": "all",
     "singleQuote": true
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.4"
   }
 }
